apps/jellyfin/overlays/ishtar/sts.patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: jellyfin
