apps/jellyfin/overlays/ishtar/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-discovery
  namespace: shikanime
  annotations:
    tailscale.com/hostname: ishtar-jellyfin-discovery
