apps/jellyfin/overlays/ishtar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: shikanime
  annotations:
    tailscale.com/tags: tag:web
    tailscale.com/hostname: ishtar-jellyfin
spec:
  defaultBackend:
    service:
      name: jellyfin
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
